2004-12-31  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/Thread/sleep.java: Minor change to make
	a JDK 1.5 bug not abort the tests prematurely.

2004-12-31  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Thread/sleep.java: Add tests for (pre)
	interrupted sleep.

2004-12-31  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/util/Currency/getInstance.java: New test.
	* gnu/testlet/java/text/DecimalFormatSymbols/getCurrency.java:
	New test.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/locales/LocaleTest.java: Fixed some expected data and
	added test data for et_EE (Estonia).

2004-12-30  Archie Cobbs <archie@dellroad.org>

	* gnu/testlet/java/lang/Class/init.java: made existing tests
	more strict and added a few more test cases
	* gnu/testlet/BinaryCompatibility/foo: put -classpath flag
	before class name(s) when invoking the Java compiler
	* gnu/testlet/java/lang/ref/WeakReference/weakref.java,
	gnu/testlet/java/lang/ref/PhantomReference/phantom.java: create
	referenced objects in a separate thread to help avoid false
	negatives in vm's that do conservative scanning of the stack.

2004-12-30  Thomas Zander  <zander@kde.org>

	* gnu/testlet/locales/LocaleTest.java: altered file to all ASCII

2004-12-30  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Thread/sleep.java: New test.

2004-12-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/ByteBuffer/compact.java,
	gnu/testlet/java/nio/CharBuffer/compact.java,
	gnu/testlet/java/nio/DoubleBuffer/compact.java,
	gnu/testlet/java/nio/FloatBuffer/compact.java,
	gnu/testlet/java/nio/IntBuffer/compact.java,
	gnu/testlet/java/nio/LongBuffer/compact.java,
	gnu/testlet/java/nio/ShortBuffer/compact.java:
	New testcases.

2004-12-27  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/nio/ByteBuffer/Allocating.java
	(test): Fixed arrayOffset check and Removed println() statements.

2004-12-26  Michael Koch  <konqueror@gmx.de>
